--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "docs": "compodoc -p src/tsconfig.app.json -d docs",
     "docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
     "prepush": "npm run lint:ci",
-    "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s"
+    "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s",
+    "cy: 1-getting-started": "npx cypress run --s 'cypress-test/cypress/e2e/1-getting-started/*'"
   },
   "dependencies": {
     "@agm/core": "^1.1.0",
@@ -94,6 +95,9 @@
     "conventional-changelog-cli": "^2.1.1",
     "cypress": "^13.6.0",
     "husky": "0.13.3",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0",
+    "mochawesome-report-generator": "^6.2.0",
     "npm-run-all": "4.0.2",
     "rimraf": "2.6.1",
     "run-script-os": "^1.1.6",
