--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+node_modules
+
+# Cypress
+cypress/merged-report
+cypress/results
+mochawesome-report
